出版本定稿，接下来修改文案即可

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+    <link rel="icon" href="/logo.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>玻璃制品官网</title>
     <meta name="description" content="专业玻璃制品制造商，提供建筑玻璃、装饰玻璃、特种玻璃等产品">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
